--- a/src/app/login/styles/login.module.css
+++ b/src/app/login/styles/login.module.css
@@ -74,6 +74,30 @@
   background-color: rgb(211, 211, 211);
 }
 
+.signupLink {
+  display: block;
+  margin-top: 1rem;
+  text-decoration: none;
+}
+
+.signupButton {
+  width: 100%;
+  background-color: transparent;
+  color: rgb(244 63 94);
+  font-weight: bold;
+  padding: 0.75rem;
+  border: 2px solid rgb(244 63 94);
+  border-radius: 1.5rem;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.signupButton:hover {
+  background-color: rgb(244 63 94);
+  color: white;
+}
+
 .errorText {
   color: #dc2626;
   padding-left: 10px;
