--- a/src/app/profile/styles/profile.module.css
+++ b/src/app/profile/styles/profile.module.css
@@ -16,14 +16,27 @@
   }
   
   .header {
+    display: flex;
+    align-items: center;
     text-align: center;
     margin-bottom: 2rem;
   }
+
+  .homeButton {
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    width: 1.5rem;
+    height: 1.5rem;
+    color: gray;
+  }
   
   .header h1 {
+    flex-grow: 1;
     font-size: 1.5rem;
     font-weight: bold;
     color: rgb(244 63 94);
+    padding-right: 10px;
   }
   
   .info {
